fixed blur() not working on mobile devices

--- a/styles.css
+++ b/styles.css
@@ -48,14 +48,12 @@ body {
     padding: 0;
 }
 
-
 .nav .menu-items ul li {
     list-style: none;
     display: flex;
     align-items: center;
     letter-spacing: 2px;
 }
-
 
 .nav ul li a {
     display: block;
@@ -80,7 +78,6 @@ body {
 }
 
 .nav ul li a:not(.resume-button):hover::after
-
 /*, a.active::after */
     {
     transform: scaleX(1);
@@ -142,6 +139,7 @@ body {
     width: 300px;
     background: rgba(255, 255, 255, 0.1);
     backdrop-filter: blur(15px);
+    -webkit-backdrop-filter: blur(15px); /* needed for blur() to work on mobile*/
     border-radius: 10px;
     overflow: hidden;
     transition: height 0.2s cubic-bezier(0.175, 0.885, 0.32, 1.275);
